--- a/404.html
+++ b/404.html
@@ -68,9 +68,9 @@
       <nav class="main-nav">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/docs/home/">Documentation</a></li>
-          <li><a href="/news/">News</a></li>
-          <li><a href="/help/">Help</a></li>
+          <!-- <li><a href="/docs/home/">Documentation</a></li> -->
+          <li><a href="/happends/">事件</a></li>
+          <!-- <li><a href="/help/">Help</a></li> -->
         </ul>
       </nav>
     </div>
