--- a/happends/index.html
+++ b/happends/index.html
@@ -107,11 +107,11 @@
   <aside>
     <ul>
       <li class="current">
-        <a href="/news/">All News</a>
+        <a href="/happends/">All Happends</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="/news/releases/">Jekyll Releases</a>
-      </li>
+      </li> -->
     </ul>
     <h4>Recent Releases</h4>
     <ul>
