--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <div class="center-on-mobiles">
       <h1>
         <a href="/" class="logo">
-          <span class="sr-only">Jekyll</span>
-          <img src="/img/logo-2x.png" width="140" height="65" alt="Jekyll Logo">
+          <span class="sr-only">Bghands</span>
+          <!-- <img src="/img/logo-2x.png" width="140" height="65" alt="Jekyll Logo"> -->
         </a>
       </h1>
     </div>
