--- a/jekyllconf/index.html
+++ b/jekyllconf/index.html
@@ -116,9 +116,9 @@
 
 <h2 id="featured">Featured</h2>
 
-<p><strong>Jekyll As An API Endpoint</strong> - <a href="https://twitter.com/Pieter_Roozen"><em>Pieter Roozen</em></a></p>
+<p><strong>Meet the Obama Campaign’s $250 Million Fundraising Platform</strong> - <a href="https://twitter.com/kylerush"><em>Kyle Rush</em></a></p>
 <div class="videoWrapper">
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/moQP0SqEPsw" frameborder="0" allowfullscreen=""></iframe>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/ia8vsuiXiL0" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
 <h2 id="2019">2019</h2>
